# tidyselect

./: .flake8  .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
docs/: .gitignore  _quarto.yml
tidyselect/: _databackends.py  _dispatch.py  eval_select.py  selectors.py
tidyselect/tests/: test_eval_select.py  test_selectors.py
